Update color page with content and navigation fixes

--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -19,8 +19,12 @@
   "search": "Quick seach",
   "colors": "Colors",
   "sizes": "Sizes",
-  "clipboard": {
-    "click-to-copy": "click to copy",
-    "copied": "copied"
+  "combining": "Combining",
+  "dark-mode": "Dark mode",
+  "states": "States",
+  "code-block": {
+    "copy": "click to copy",
+    "copied": "copied",
+    "more": "show more"
   }
 }
