--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
@@ -4,7 +4,12 @@ description: import
 slug: icon-info-styling
 ---
 
-import { Title4, Paragraph } from "@/components/documentation";
+import {
+  Title4,
+  Paragraph,
+  Code,
+  ExternalLink,
+} from "@/components/documentation";
 
     <Title4>Styling</Title4>
-    <Paragraph>You can use Tailwind <a href="https://tailwindcss.com/docs/size">sizes</a> or even define it using <a href="https://tailwindcss.com/docs/height">height</a> and <a href="https://tailwindcss.com/docs/width">width</a> classes, however few helpers sizes classes are defined to make your work even easier. and few more words</Paragraph>
+    <Paragraph>Use the utilities <Code>icons-*</Code> styling the component. Combining with the power of <ExternalLink href="https://tailwindcss.com/docs/installation">Tailwind</ExternalLink>, you should be able achiving any result your project requires.</Paragraph>
