--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -26,5 +26,10 @@
     "copy": "click e copie",
     "copied": "copiado",
     "more": "ver mais"
+  },
+  "update-alert": {
+    "hover-alert": "Passe o mouse sobre o ícone e veja o que acontence",
+    "dark-mode-alert": "Selecione outro tema e veja as mudanças no ícone",
+    "changes-alert": "Observe o ícone mudando conforme outra opções são escolhidas"
   }
 }
