Rename external link to doc link and add sizing content

--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-colors
 ---
 
-import { Prose, ExternalLink } from "@/components/documentation";
+import { Prose, DocLink } from "@/components/documentation";
 
-    <Prose>Use the colors utilities to colorize the icons. See Tailwind <ExternalLink href="https://tailwindcss.com/docs/customizing-colors">colors section</ExternalLink> to learn more about it.</Prose>
+    <Prose>Use the colors utilities to colorize the icons. See Tailwind <DocLink external href="https://tailwindcss.com/docs/customizing-colors">colors section</DocLink> to learn more about it.</Prose>
