--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-sizing
 ---
 
-import { Prose, ExternalLink } from "@/components/documentation";
+import { Prose, DocLink } from "@/components/documentation";
 
-    <Prose>Utilities for setting icons size. It can be <ExternalLink href="/docs/getting-started#configuration">customized</ExternalLink> or added as your need. Tailwind utilities like <ExternalLink href="https://tailwindcss.com/docs/size">size</ExternalLink>, <ExternalLink href="https://tailwindcss.com/docs/height">height</ExternalLink> and <ExternalLink href="https://tailwindcss.com/docs/width">width</ExternalLink> can be used as well.</Prose>
+    <Prose>Utilities for setting icons size. It can be <DocLink href="/docs/getting-started#configuration">customized</DocLink> or added as your need. Tailwind utilities like <DocLink external href="https://tailwindcss.com/docs/size">size</DocLink>, <DocLink external href="https://tailwindcss.com/docs/height">height</DocLink> and <DocLink external href="https://tailwindcss.com/docs/width">width</DocLink> can be used as well.</Prose>
