--- a/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
@@ -4,7 +4,7 @@ description: import
 slug: icon-info-states
 ---
 
-import { Prose, ExternalLink } from "@/components/documentation";
+import { Prose, DocLink } from "@/components/documentation";
 
-    <Prose>Hover, Focus, and Outros estados tem total funcionalidade na web, porém o suporte do NativeWind ainda não é completo e algumas limitações podem ser encontradas como descrito na <ExternalLink href="https://www.nativewind.dev/core-concepts/states">documentação oficial</ExternalLink>.</Prose>
-    <Prose>Temos uma <ExternalLink href="/docs/state-management">seção dedicada aos estados</ExternalLink> a isso em nossa documentação.</Prose>
+    <Prose>Hover, Focus, and Outros estados tem total funcionalidade na web, porém o suporte do NativeWind ainda não é completo e algumas limitações podem ser encontradas como descrito na <DocLink external href="https://www.nativewind.dev/core-concepts/states">documentação oficial</DocLink>.</Prose>
+    <Prose>Temos uma <DocLink href="/docs/state-management">seção dedicada aos estados</DocLink> a isso em nossa documentação.</Prose>
