--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
@@ -4,12 +4,7 @@ description: import
 slug: icon-info-styling
 ---
 
-import {
-  Title4,
-  Paragraph,
-  Code,
-  ExternalLink,
-} from "@/components/documentation";
+import { Title4, Paragraph, Code, DocLink } from "@/components/documentation";
 
     <Title4>Styling</Title4>
-    <Paragraph>Use the utilities <Code>icons-*</Code> styling the component. Combining with the power of <ExternalLink href="https://tailwindcss.com/docs/installation">Tailwind</ExternalLink>, you should be able achiving any result your project requires.</Paragraph>
+    <Paragraph>Use the utilities <Code>icons-*</Code> styling the component. Combining with the power of <DocLink external href="https://tailwindcss.com/docs/installation">Tailwind</DocLink>, you should be able achiving any result your project requires.</Paragraph>
