--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-colors
 ---
 
-import { Prose, ExternalLink } from "@/components/documentation";
+import { Prose, DocLink } from "@/components/documentation";
 
-    <Prose>Use os utilitários de colores para escolher as cores dos ícones. Veja a <ExternalLink href="https://tailwindcss.com/docs/customizing-colors">documentação de cores</ExternalLink> do Tailwind para saber mais.</Prose>
+    <Prose>Use os utilitários de colores para escolher as cores dos ícones. Veja a <DocLink external href="https://tailwindcss.com/docs/customizing-colors">documentação de cores</DocLink> do Tailwind para saber mais.</Prose>
