--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-sizing
 ---
 
-import { Prose, ExternalLink } from "@/components/documentation";
+import { Prose, DocLink } from "@/components/documentation";
 
-    <Prose>Utilitários de tamanho dos ícones. Eles podem ser <ExternalLink href="/docs/getting-started#configuration">alterados</ExternalLink> ou criados conforme sua necessidade. Utilitários Tailwind como <ExternalLink href="https://tailwindcss.com/docs/size">tamanho</ExternalLink>, <ExternalLink href="https://tailwindcss.com/docs/height">altura</ExternalLink> e <ExternalLink href="https://tailwindcss.com/docs/width">largura</ExternalLink> também estão disponíveis.</Prose>
+    <Prose>Utilitários de tamanho dos ícones. Eles podem ser <DocLink href="/docs/getting-started#configuration">alterados</DocLink> ou criados conforme sua necessidade. Utilitários Tailwind como <DocLink external href="https://tailwindcss.com/docs/size">tamanho</DocLink>, <DocLink external href="https://tailwindcss.com/docs/height">altura</DocLink> e <DocLink external href="https://tailwindcss.com/docs/width">largura</DocLink> também estão disponíveis.</Prose>
