--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
@@ -4,12 +4,7 @@ description: import
 slug: icon-info-styling
 ---
 
-import {
-  Title4,
-  Paragraph,
-  Code,
-  ExternalLink,
-} from "@/components/documentation";
+import { Title4, Paragraph, Code, DocLink } from "@/components/documentation";
 
     <Title4>Estilizando</Title4>
-    <Paragraph>Use os utilitários <Code>icons-*</Code> para te auxiliar na estilização do componente. Combinando com tudo o que o <ExternalLink href="https://tailwindcss.com/docs/installation">Tailwind</ExternalLink> oferece, você deve ser capaz de chegar praticamente a qualquer resultado.</Paragraph>
+    <Paragraph>Use os utilitários <Code>icons-*</Code> para te auxiliar na estilização do componente. Combinando com tudo o que o <DocLink external href="https://tailwindcss.com/docs/installation">Tailwind</DocLink> oferece, você deve ser capaz de chegar praticamente a qualquer resultado.</Paragraph>
