Remove tags from mdx and use mdx component styling it instead

--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -4,7 +4,5 @@ description: Discover how to easily incorporate popular icons into your React an
 slug: icons-hero
 ---
 
-import { Title, Highlight } from "@/components/documentation";
-
-    <Title>Icons on React or React-Native, easily in a cross-platform solution</Title>
-    <Highlight>Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.</Highlight>
+# Icons on React or React-Native, easily in a cross-platform solution
+Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.
