--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
@@ -8,7 +8,7 @@ activeSelector: group-has-[.docs-configuracao]:active-content
 
 import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
-## Configuração
+### Configuração
 
 Para usar <RocketIconsTextDefault /> em seus projetos, você precisa ter uma configuração mínima.
 
