--- a/packages/ignition/src/app/locales/docs/getting-started/components/contributing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/contributing.en.mdx
@@ -8,16 +8,16 @@ activeSelector: group-has-[.docs-contributing]:active-content
 
 import { IoLogoGithub } from 'rocketicons/io';
 
-## Contributing
+### Contributing
 
 Here is how you can contribute to the project:
 
 
 
-1. Fork the repository on [<IoLogoGithub className='-mt-1' /> GitHub](https://github.com/rocketclimb/rocketicons).
+1. Fork the repository on <IoLogoGithub className='-mt-1' /> [GitHub](https://github.com/rocketclimb/rocketicons).
 2. Make your changes.
 3. Submit a pull request.
 
-## Issue Reporting
+### Issue Reporting
 
-If you find a bug or have a feature request, please report it on the [<IoLogoGithub className='-mt-1' /> issues page](https://github.com/rocketclimb/rocketicons/issues).
+If you find a bug or have a feature request, please report it on the <IoLogoGithub className='-mt-1' /> [issues page](https://github.com/rocketclimb/rocketicons/issues).
