--- a/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
@@ -8,14 +8,14 @@ activeSelector: group-has-[.docs-contribuindo]:active-content
 
 import { IoLogoGithub } from 'rocketicons/io';
 
-## Contribuindo
+### Contribuindo
 
 Aqui está como você pode contribuir para o projeto:
 
-1. Fork o repositório no [<IoLogoGithub className='-mt-1' /> GitHub](https://github.com/rocketclimb/rocketicons).
+1. Fork o repositório no <IoLogoGithub className='-mt-1' /> [GitHub](https://github.com/rocketclimb/rocketicons).
 2. Faça suas alterações.
 3. Envie uma solicitação pull.
 
-## Relatório de Problemas
+### Relatório de Problemas
 
-Se você encontrar um bug ou tiver um pedido de recurso, por favor, reporte-o na página de [<IoLogoGithub className='-mt-1' /> issues](https://github.com/rocketclimb/rocketicons/issues) no GitHub.
+Se você encontrar um bug ou tiver um pedido de recurso, por favor, reporte-o na página de <IoLogoGithub className='-mt-1' /> [issues](https://github.com/rocketclimb/rocketicons/issues) no GitHub.
