--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.en.mdx
@@ -10,7 +10,7 @@ import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicon
 
 import { SiReact, SiTailwindcss } from 'rocketicons/si';
 
-## Customization
+### Customization
 
 <RocketIconsTextDefault /> can be easily customized on every use using <SiTailwindcss className="-mt-1" />  **Tailwind** classes to match your application's design.
 
@@ -18,11 +18,11 @@ You can also create <SiReact className="-mt-1 icon-sky-800" /> **React** compone
 
 Again, always using the <SiTailwindcss className="-mt-1" /> **Tailwind** classes.
 
-## Global customization
+### Global customization
 
 You can define a global customization for all icons in two ways:
 
-### 1. By redefining the default theme
+#### 1. By redefining the default theme
 
 - Add a components element under the theme section of your ***tailwind.config.js*** and a icon element 
 under the components element.
@@ -88,7 +88,7 @@ This is what our default theme looks like:
 },
 ```
 
-### 2. By extending the default theme
+#### 2. By extending the default theme
 
 If the default theme is fine and you just want to tweak some properties or add new variants or sizes, 
 you can just extend the default theme.
