--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
@@ -10,7 +10,7 @@ import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicon
 
 import { SiReact, SiTailwindcss } from 'rocketicons/si';
 
-## Customização
+### Customização
 
 <RocketIconsTextDefault /> pode ser facilmente personalizado em cada uso usando classes do 
 <SiTailwindcss className="-mt-1" /> **Tailwind** para combinar com o design de sua aplicação.
