--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
@@ -8,7 +8,7 @@ activeSelector: group-has-[.docs-installation]:active-content
 
 import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
-## Installation
+### Installation
 
 To install <RocketIconsTextDefault />, simply run the following command in your terminal:
 
