--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
@@ -8,7 +8,7 @@ activeSelector: group-has-[.docs-instalacao]:active-content
 
 import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
-## Instalação
+### Instalação
 
 Para instalar <RocketIconsTextDefault />, simplesmente execute o seguinte comando no seu terminal:
 
