--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -6,25 +6,29 @@ order: 0
 activeSelector: group-has-[.docs-primeiros-passos]:active-content
 ---
 
-import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
+import RocketIconsText, {
+  RocketIconsTextDefault,
+} from "@/components/rocketicons-text";
 import Instalacao from "./components/installation.pt-br.mdx";
 import Configuracao from "./components/configuration.pt-br.mdx";
 import Personalizacao from "./components/customization.pt-br.mdx";
 import Contribuicao from "./components/contributing.pt-br.mdx";
-import { SiReact, SiTailwindcss, SiExpo } from 'rocketicons/si';
-
-# Primeiros Passos
+import { SiReact, SiTailwindcss, SiExpo } from "rocketicons/si";
 
 ## Introdução
 
+# Primeiros Passos
+
 Bem-vindo à documentação para <RocketIconsTextDefault />!
 Este componente fornece uma coleção de ícones para uso em seus projetos <SiReact className="-mt-1 icon-sky-800" /> **React** web e **React Native**.
-<RocketIconsTextDefault /> utiliza classes do **Tailwind CSS** para estilização, tornando fácil a personalização e integração em suas aplicações.
+<RocketIconsTextDefault /> utiliza classes do **Tailwind CSS** para estilização,
+tornando fácil a personalização e integração em suas aplicações.
 
 ## Por que foi criado?
 
-<RocketIconsTextDefault /> foi criado para fornecer uma biblioteca de ícones simples e fácil de usar para desenvolvedores que desejam escrever um único código que possa funcionar tanto em **React** web quanto em **React Native**.
-
+<RocketIconsTextDefault /> foi criado para fornecer uma biblioteca de ícones
+simples e fácil de usar para desenvolvedores que desejam escrever um único
+código que possa funcionar tanto em **React** web quanto em **React Native**.
 
 Fomos motivados pela existência de ótimas
 ferramentas como
