--- a/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
@@ -6,11 +6,9 @@ order: 6
 activeSelector: group-has-[.docs-cores]:active-content
 ---
 
-import { Title, Highlight } from "@/components/documentation";
+# Como Usar Cores
 
-<Title>Como Usar Cores</Title>
-
-    <Highlight> Para aplicar cores aos elementos em sua aplicação, siga estes passos:</Highlight>
+Para aplicar cores aos elementos em sua aplicação, siga estes passos:
 
 1. Defina valores de cor usando propriedades CSS como `color`, `background-color`, `border-color`, etc.
 2. Utilize códigos de cores hexadecimais (`#RRGGBB`), valores RGB (`rgb(r, g, b)`) ou nomes de cores CSS para especificar as cores.
