--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
@@ -7,6 +7,4 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import { Paragraph, DocLink } from "@/components/documentation";
-
-      <Paragraph>Learn more about customizing the default theme size in the <DocLink href="/docs/getting-stated#customization" >theme customization documentation</DocLink>.</Paragraph>
+Learn more about customizing the default theme size in the [theme customization documentation](/docs/getting-started#customization).
