--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
@@ -7,6 +7,4 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import { Paragraph, DocLink } from "@/components/documentation";
-
-      <Paragraph>Aprenda como customizar o tema padrão na <DocLink href="/docs/getting-stated#customization" >documentação de customização do tema</DocLink>.</Paragraph>
+Aprenda como customizar o tema padrão na [documentação de customização do tema](/docs/getting-started#customization).
