--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
@@ -7,13 +7,5 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import {
-  Title2,
-  Title3,
-  Paragraph,
-  Code,
-  DocLink,
-} from "@/components/documentation";
-
-    <Title3>Utilizando altura and largura</Title3>
-    <Paragraph>Use os utillitários <Code>h-\*</Code> combinado com <Code>w-\*</Code> para controlar as dimensões do ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial <DocLink external href="https://tailwindcss.com/docs/height">altura</DocLink> e <DocLink external href="https://tailwindcss.com/docs/width">largura</DocLink> do Tailwind.</Paragraph>
+### Utilizando altura and largura
+Use os utillitários `h-*` combinado com `w-*` para controlar as dimensões do ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial [altura](https://tailwindcss.com/docs/height) e [largura](https://tailwindcss.com/docs/width) do Tailwind.
