--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
@@ -7,14 +7,7 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import {
-  Title2,
-  Title3,
-  Paragraph,
-  Code,
-  DocLink,
-} from "@/components/documentation";
+## Using Tailwind utilities
+### Using sizes
 
-    <Title2>Using Tailwind utilities</Title2>
-    <Title3>Using sizes</Title3>
-    <Paragraph>Use the <Code>size-*</Code> utilities to control the size of an icon. There are a few samples of how to use it below, but for a full list of available options, refer to the official Tailwind documentation for <DocLink external href="https://tailwindcss.com/docs/size">sizes</DocLink>.</Paragraph>
+Use the `size-*` utilities to control the size of an icon. There are a few samples of how to use it below, but for a full list of available options, refer to the official Tailwind documentation for [sizes](https://tailwindcss.com/docs/size).
