--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
@@ -7,14 +7,7 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import {
-  Title2,
-  Title3,
-  Paragraph,
-  Code,
-  DocLink,
-} from "@/components/documentation";
+## Usando utilitários do Tailwind
+### Usando sizes
 
-    <Title2>Usando utilitários do Tailwind</Title2>
-    <Title3>Usando sizes</Title3>
-    <Paragraph>Utilize os utilitários <Code>size-*</Code> para definir o tamanho de um ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial <DocLink external href="https://tailwindcss.com/docs/size">tamanhos</DocLink> do Tailwind.</Paragraph>
+Utilize os utilitários `size-*` para definir o tamanho de um ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial [tamanhos](https://tailwindcss.com/docs/size) do Tailwind.
