--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
@@ -7,8 +7,7 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import { Title2, Title3, Paragraph, Code } from "@/components/documentation";
+## Basic usage
+### Setting the icon size
 
-    <Title2>Basic usage</Title2>
-    <Title3>Setting the icon size</Title3>
-    <Paragraph>Use the <Code>icon-\{size\}</Code> utilities to control the size of an icon.</Paragraph>
+Use the `icon-{size}` utilities to control the size of an icon.
