--- a/packages/ignition/src/app/locales/docs/usage/sizing-elements.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-elements.en.mdx
@@ -6,8 +6,6 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import { Title, Highlight } from "@/components/documentation";
+# How to Size Elements
 
-<Title>How to Size Elements</Title>
-
-<Highlight>Utilities for controlling the size of an icon.</Highlight>
+Utilities for controlling the size of an icon.
