--- a/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
@@ -6,8 +6,6 @@ order: 5
 activeSelector: group-has-[.docs-dimensionando-elementos]:active-content
 ---
 
-import { Title, Highlight } from "@/components/documentation";
+# Como Dimensionar Elementos
 
-    <Title>Como Dimensionar Elementos</Title>
-
-    <Highlight>Utilitários para controlar o tamanho dos ícones.</Highlight>
+Utilitários para controlar o tamanho dos ícones.
