--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
@@ -8,7 +8,7 @@ activeSelector: group-has-[.docs-configuration]:active-content
 
 import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
-## Configuration
+### Configuration
 
 In order to use <RocketIconsTextDefault />  in your projects, you need to have a minimum setup.
 
