--- a/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
@@ -6,11 +6,9 @@ order: 6
 activeSelector: group-has-[.docs-colors]:active-content
 ---
 
-import { Title, Highlight } from "@/components/documentation";
+# How to Use Colors
 
-<Title>How to Use Colors</Title>
-
-    <Highlight>To apply colors to elements in your application, follow these steps:</Highlight>
+To apply colors to elements in your application, follow these steps:
 
 1. Define color values using CSS properties like `color`, `background-color`, `border-color`, etc.
 2. Use hexadecimal color codes (`#RRGGBB`), RGB values (`rgb(r, g, b)`), or CSS color names to specify colors.
