--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
@@ -7,13 +7,5 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import {
-  Title2,
-  Title3,
-  Paragraph,
-  Code,
-  DocLink,
-} from "@/components/documentation";
-
-    <Title3>Using height and width</Title3>
-    <Paragraph>Use the <Code>h-\*</Code> utilities combined with <Code>w-\*</Code> to control the dimensions of an icon. There are a few samples of how to use it below, but for a full list of available options, refer to the official Tailwind documentation for <DocLink external href="https://tailwindcss.com/docs/height">height</DocLink> and <DocLink external href="https://tailwindcss.com/docs/width">width</DocLink>.</Paragraph>
+### Using height and width
+Use the `h-*` utilities combined with `w-*` to control the dimensions of an icon. There are a few samples of how to use it below, but for a full list of available options, refer to the official Tailwind documentation for [height](https://tailwindcss.com/docs/height) and [width](https://tailwindcss.com/docs/width).
