--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
@@ -7,8 +7,7 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-import { Title2, Title3, Paragraph, Code } from "@/components/documentation";
+# Uso básico
+## Definindo o tamanho dos ícones
 
-    <Title2>Uso básico</Title2>
-    <Title3>Definindo o tamanho dos ícones</Title3>
-    <Paragraph>Utilize os utiliários <Code>icon-\{size\}</Code> para controlar o tamanho do ícone.</Paragraph>
+Utilize os utiliários `icon-{size}` para controlar o tamanho do ícone.
