feat(layout) Update layout and mdx parse

--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-colors
 ---
 
-import { Prose, DocLink } from "@/components/documentation";
-
-    <Prose>Use the colors utilities to colorize the icons. See Tailwind <DocLink external href="https://tailwindcss.com/docs/customizing-colors">colors section</DocLink> to learn more about it.</Prose>
+Use the colors utilities to colorize the icons. See Tailwind [colors section](https://tailwindcss.com/docs/customizing-colors) to learn more about it.
