--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-colors
 ---
 
-import { Prose, DocLink } from "@/components/documentation";
-
-    <Prose>Use os utilitários de colores para escolher as cores dos ícones. Veja a <DocLink external href="https://tailwindcss.com/docs/customizing-colors">documentação de cores</DocLink> do Tailwind para saber mais.</Prose>
+Use os utilitários de colores para escolher as cores dos ícones. Veja a [documentação de cores](https://tailwindcss.com/docs/customizing-colors) do Tailwind para saber mais.
