--- a/packages/ignition/src/app/locales/components/icons/icon-info-import.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-import.pt-br.mdx
@@ -4,7 +4,6 @@ description: import
 slug: icon-info-import
 ---
 
-import { Paragraph } from "@/components/documentation";
 import RocketIconsText from "@/components/rocketicons-text";
 
-    <Paragraph className="mb-1.5">Importe o ícone do pacote <RocketIconsText /></Paragraph>
+Importe o ícone do pacote <RocketIconsText />
