--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-sizing
 ---
 
-import { Prose, DocLink } from "@/components/documentation";
-
-    <Prose>Utilities for setting icons size. It can be <DocLink href="/docs/getting-started#configuration">customized</DocLink> or added as your need. Tailwind utilities like <DocLink external href="https://tailwindcss.com/docs/size">size</DocLink>, <DocLink external href="https://tailwindcss.com/docs/height">height</DocLink> and <DocLink external href="https://tailwindcss.com/docs/width">width</DocLink> can be used as well.</Prose>
+Utilities for setting icons size. It can be [customized](/docs/getting-started#configuration) or added as your need. Tailwind utilities like [size](https://tailwindcss.com/docs/size), [height](https://tailwindcss.com/docs/height) and [width](https://tailwindcss.com/docs/width) can be used as well.
