--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-sizing
 ---
 
-import { Prose, DocLink } from "@/components/documentation";
-
-    <Prose>Utilitários de tamanho dos ícones. Eles podem ser <DocLink href="/docs/getting-started#configuration">alterados</DocLink> ou criados conforme sua necessidade. Utilitários Tailwind como <DocLink external href="https://tailwindcss.com/docs/size">tamanho</DocLink>, <DocLink external href="https://tailwindcss.com/docs/height">altura</DocLink> e <DocLink external href="https://tailwindcss.com/docs/width">largura</DocLink> também estão disponíveis.</Prose>
+Utilitários de tamanho dos ícones. Eles podem ser [alterados](/docs/getting-started#configuration) ou criados conforme sua necessidade. Utilitários Tailwind como [tamanho](https://tailwindcss.com/docs/size), [altura](https://tailwindcss.com/docs/height) e [largura](https://tailwindcss.com/docs/width) também estão disponíveis.
