--- a/packages/ignition/src/app/locales/components/icons/icon-info-usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-usage.pt-br.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-usage
 ---
 
-import { Paragraph } from "@/components/documentation";
-
-    <Paragraph className="mt-3 mb-1.5">Posicione o componente onde você precisar</Paragraph>
+Posicione o componente onde você precisar
