--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -5,4 +5,5 @@ slug: icons-hero
 ---
 
 # Icons on React or React-Native, easily in a cross-platform solution
-Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.
+Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons,  
+enabling code sharing between web and native applications, providing a cross-platform solution.
