--- a/packages/ignition/src/app/locales/components/icons/icon-info-combining.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-combining.en.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-combining
 ---
 
-import { Prose, Code } from "@/components/documentation";
-
-    <Prose>Combine the icons utilities changing the colors and the size of the component on the same time. It should be combined on the format <Code xs>icon-\{color\}-\{size\}</Code> and just one utilitied should be applied at once.</Prose>
+Combine the icons utilities changing the colors and the size of the component on the same time. It should be combined on the format `icon-{color}-{size}` and just one utilitied should be applied at once.
