--- a/packages/ignition/src/app/locales/components/icons/icon-info-combining.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-combining.pt-br.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-combining
 ---
 
-import { Prose, Code } from "@/components/documentation";
-
-    <Prose>Os utilitários de ícones podem ser combinados para altera o tamaho e a cor do componente ao mesmo tempo. Eles devem ser usados no formato <Code xs>icon-\{cor\}-\{tamanho\}</Code> e apenas um utilário deve ser aplicado por vez.</Prose>
+Os utilitários de ícones podem ser combinados para altera o tamaho e a cor do componente ao mesmo tempo. Eles devem ser usados no formato `icon-{cor}-{tamanho}`e apenas um utilário deve ser aplicado por vez.
