--- a/packages/ignition/src/app/locales/components/icons/icon-info-dark.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-dark.pt-br.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-dark
 ---
 
-import { Prose } from "@/components/documentation";
-
-    <Prose>Utilizando-se do poder do Tailwind (e do NativeWind no React-native), a variante de modo escuro pode ser utilizada para definir uma aparencia diferente quando esse modo estiver ativado.</Prose>
+Utilizando-se do poder do Tailwind (e do NativeWind no React-native), a variante de modo escuro pode ser utilizada para definir uma aparencia diferente quando esse modo estiver ativado.
