--- a/packages/ignition/src/app/locales/components/icons/icon-info-import.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-import.en.mdx
@@ -4,7 +4,7 @@ description: import
 slug: icon-info-import
 ---
 
-import { Paragraph } from "@/components/documentation";
+
 import RocketIconsText from "@/components/rocketicons-text";
 
-    <Paragraph className="mb-1.5">Import the icon component from <RocketIconsText /></Paragraph>
+Import the icon component from <RocketIconsText />
