--- a/packages/ignition/src/app/locales/components/icons/icon-info-states.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-states.en.mdx
@@ -4,7 +4,5 @@ description: import
 slug: icon-info-states
 ---
 
-import { Prose, DocLink } from "@/components/documentation";
-
-    <Prose>Hover, Focus, and and Other States has total power on web, however the NativeWind support is not complete and there are few limitations as described on the <DocLink external href="https://www.nativewind.dev/core-concepts/states">official documentation</DocLink>.</Prose>
-    <Prose>There is also a <DocLink href="/docs/state-management">dedicated state section</DocLink> on the documentation.</Prose>
+Hover, Focus, and and Other States has total power on web, however the NativeWind support is not complete and there are few limitations as described on the [official documentation](https://www.nativewind.dev/core-concepts/states).
+There is also a [dedicated state section](/docs/state-management) on the documentation.
