--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
@@ -4,7 +4,5 @@ description: import
 slug: icon-info-styling
 ---
 
-import { Title4, Paragraph, Code, DocLink } from "@/components/documentation";
-
-    <Title4>Styling</Title4>
-    <Paragraph>Use the utilities <Code>icons-*</Code> styling the component. Combining with the power of <DocLink external href="https://tailwindcss.com/docs/installation">Tailwind</DocLink>, you should be able achiving any result your project requires.</Paragraph>
+#### Styling
+Use the utilities `icons-*` styling the component. Combining with the power of [Tailwind](https://tailwindcss.com/docs/installation), you should be able achiving any result your project requires.
