--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
@@ -4,7 +4,5 @@ description: import
 slug: icon-info-styling
 ---
 
-import { Title4, Paragraph, Code, DocLink } from "@/components/documentation";
-
-    <Title4>Estilizando</Title4>
-    <Paragraph>Use os utilitários <Code>icons-*</Code> para te auxiliar na estilização do componente. Combinando com tudo o que o <DocLink external href="https://tailwindcss.com/docs/installation">Tailwind</DocLink> oferece, você deve ser capaz de chegar praticamente a qualquer resultado.</Paragraph>
+#### Estilizando
+Use os utilitários `icons-*` para te auxiliar na estilização do componente. Combinando com tudo o que o [Tailwind](https://tailwindcss.com/docs/installation) oferece, você deve ser capaz de chegar praticamente a qualquer resultado.
