--- a/packages/ignition/src/app/locales/components/icons/icon-info-usage.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-usage.en.mdx
@@ -4,6 +4,4 @@ description: import
 slug: icon-info-usage
 ---
 
-import { Paragraph } from "@/components/documentation";
-
-    <Paragraph className="mt-3 mb-1.5">Place the element wherever you need</Paragraph>
+Place the element wherever you need
