Update colors usage content and layout fixes

--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -32,10 +32,10 @@ código que possa funcionar tanto em **React** web quanto em **React Native**.
 
 Fomos motivados pela existência de ótimas
 ferramentas como
-[<SiTailwindcss className="-mt-1" /> Tailwind CSS](https://tailwindcss.com/),
-[<SiExpo className="-mt-1" /> Expo](https://expo.dev/),
-[<SiReact className="-mt-1 icon-sky-500" /> NativeWind](https://nativewind.dev) e
-[<SiReact className="-mt-1 icon-red-800" /> React Icons](https://react-icons.github.io/react-icons/).
+<SiTailwindcss className="-mt-1" /> [Tailwind CSS](https://tailwindcss.com/),
+<SiExpo className="-mt-1" /> [Expo](https://expo.dev/),
+<SiReact className="-mt-1 icon-sky-500" /> [NativeWind](https://nativewind.dev) e
+<SiReact className="-mt-1 icon-red-800" /> [React Icons](https://react-icons.github.io/react-icons/).
 Essas ferramentas são ótimas e nós as amamos, mas queríamos criar uma experiência ainda mais fácil
 para os desenvolvedores que trabalham com múltiplas plataformas com o mesmo código base.
 
