--- a/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
@@ -8,10 +8,4 @@ activeSelector: group-has-[.docs-colors]:active-content
 
 # How to Use Colors
 
-To apply colors to elements in your application, follow these steps:
-
-1. Define color values using CSS properties like `color`, `background-color`, `border-color`, etc.
-2. Use hexadecimal color codes (`#RRGGBB`), RGB values (`rgb(r, g, b)`), or CSS color names to specify colors.
-3. Use CSS frameworks like Bootstrap or Tailwind CSS to simplify color implementation.
-
-Here's an example of how to use colors:
+Utilities for controlling the color of an icon.
