--- a/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
@@ -8,10 +8,4 @@ activeSelector: group-has-[.docs-cores]:active-content
 
 # Como Usar Cores
 
-Para aplicar cores aos elementos em sua aplicação, siga estes passos:
-
-1. Defina valores de cor usando propriedades CSS como `color`, `background-color`, `border-color`, etc.
-2. Utilize códigos de cores hexadecimais (`#RRGGBB`), valores RGB (`rgb(r, g, b)`) ou nomes de cores CSS para especificar as cores.
-3. Utilize frameworks CSS como Bootstrap ou Tailwind CSS para simplificar a implementação de cores.
-
-Aqui está um exemplo de como usar cores:
+Utilitários para controlar a cor dos ícones.
