--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -28,6 +28,11 @@
   "combining": "Combining",
   "dark-mode": "Dark mode",
   "states": "States",
+  "show-all": "Show all icons",
+  "icon": "icon",
+  "table": {
+    "headers": ["Class", "Properties"]
+  },
   "code-block": {
     "copy": "click to copy",
     "copied": "copied",
